# wise-api-services

./: .dockerignore  .env.example  .flaskenv  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py  shell.nix
app/: app.py  config.py  extentions.py
app/api/: __init__.py  error_handler.py
app/api/error/: __init__.py
app/api/resources/: auth.py  history.py  hospital.py  predict.py  user.py
app/api/schemas/: injury_classes.py  medical_records.py  users.py
app/models/: __init__.py  injury_classes.py  medical_records.py  token_blacklist.py  users.py
app/services/: mailer.py
app/static/: swagger.json
app/utils/: __init__.py  gcs.py  hospital.py  token.py
migrations/versions/: 3218ec759fe6_add_injury_class_and_medical_records.py  662c5656f008_add_token_field_in_users.py  6a0911c495e9_update_table_user.py  d2da0855109e_add_user_schema.py  e22b636bd402_update_users_and_create_token_blacklists.py
script/: download_model.py  injury_classes_seeders.py
tests/: auth_test.py  conftest.py  user_test.py
